principal title dark

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="./images/logomate70pxazul.png" alt="">
             </div>
             <div>
-                <h1 class="display-1 text-center text-body-secondary pb-2"><b><strong>INNOVATIVE ELECTRONIC STUDIO</strong></b></h1>
+                <h1 class="display-1 text-center text-dark pb-2"><b><strong>INNOVATIVE ELECTRONIC STUDIO</strong></b></h1>
                 <h4 class="text-center text-body-secondary col-md-6 offset-md-3 fw-normal">We deliver cutting-edge electronic solutions that drive innovation and bring your ideas to life in the digital realm.</h4>
             </div>
             <div class="text-center">
@@ -118,7 +118,7 @@
 
   <section class="mateWare-456">
     
-        <div class="mateWare-container mateWare-ourteam container-fluid text-center bg-light d-flex flex-column flex-wrap justify-content-center" id="mw-ourteam">
+        <div class="mateWare-container mateWare-ourteam container-fluid text-center bg-light d-flex flex-column flex-wrap justify-content-center pt-5" id="mw-ourteam">
             <div class="row">
                 <div class="col-sm-5 col-md-6 text-center d-flex flex-column flex-wrap justify-content-between">
                     <div>
@@ -128,7 +128,7 @@
                    
                     <div class="container-fluid text-center col-md-6 offset-md-3">
                         <p class="fw-light text-success text-opacity-50">_____________________________</p>
-                        <p class="fs-5 fw-normal text-success text-opacity-50">Our mission is to use our technological expertise to develop innovative solutions that adapt to your needs and resolve your problems in the most efficient way possible.</p>
+                        <p class="fs-5 fw-normal text-success text-opacity-50 pb-5">Our mission is to use our technological expertise to develop innovative solutions that adapt to your needs and resolve your problems in the most efficient way possible.</p>
                     </div>
                 </div>
                 <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 container d-flex flex-column flex-wrap justify-content-center">
