added links to our team photos

--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
                 <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 container d-flex flex-column flex-wrap justify-content-center">
                     <div class="row">
                         <div class="col-sm-5 col-md-6">  
-                            <img class="mateWare-ourteamCard pb-3" src="./images/marcosperalta.jpg" alt="">
+                            <a href="https://www.linkedin.com/in/marcos-peralta-b18447181"><img class="mateWare-ourteamCard pb-3" src="./images/marcosperalta.jpg" alt=""></a>
                             <h5>Marcos Peralta</h5>
                             <p class="pb-5">Firmware Engineer</p>
-                            <img class="mateWare-ourteamCard pb-3" src="./images/alvarogiunta.jpg" alt="">
+                            <a href="https://www.linkedin.com/in/alvaro-giunta/"><img class="mateWare-ourteamCard pb-3" src="./images/alvarogiunta.jpg" alt=""></a>
                             <h5>Alvaro Giunta</h5>
                             <p class="">IT Engineer</p>
                         </div>
                         <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">  
-                            <img class="mateWare-ourteamCard pb-3" src="./images/federicoalderisi.jpg" alt="">
+                            <a href="https://www.linkedin.com/in/federico-alderisi/"><img class="mateWare-ourteamCard pb-3" src="./images/federicoalderisi.jpg" alt=""></a>
                             <h5>Federico Alderisi</h5>  
                             <p class="pb-5">IT Engineer</p>
-                            <img class="mateWare-ourteamCard pb-3" src="./images/gabrielcaballero.jpg" alt="">
+                            <a href="https://www.linkedin.com/in/gabriel-caballero/"><img class="mateWare-ourteamCard pb-3" src="./images/gabrielcaballero.jpg" alt=""></a>
                             <h5>Gabriel Caballero</h5>
                             <p class="">Development Manager</p>
                         </div>     
@@ -158,7 +158,7 @@
             <div class="mateWare-contactBox rounded-5">
                 <div class="row">
                     <div class="col-sm-5 col-md-6 rounded-5 text-center">
-                        <h2>Contact Us</h2>
+                        <h2>Talk to Us</h2>
                     </div>
                     <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
                         <p class="d-none"> hola</p>
