section talk to us added. d-none

--- a/index.html
+++ b/index.html
@@ -155,12 +155,33 @@
         </div>
 
         <div class="mateWare-container mateWare-contact container-fluid text-center p-5" id="mw-contactus">
-            <div class="mateWare-contactBox rounded-5">
-                <div class="row">
-                    <div class="col-sm-5 col-md-6 rounded-5 text-center">
-                        <h2>Talk to Us</h2>
+            <div class="mateWare-contactBox row d-none">
+                <div class="col-sm-5 col-md-6 rounded-5 text-start d-flex flex-column ">
+                    <div class="row align-items-start py-5">
+                        <div class="col-sm-5 col-md-6">
+                            <h2>Talk to Us.</h2>
+                            <p>Reach out for an exploratory conversation.</p>
+                        </div>
+                    </div> 
+                    <div class="row align-items-center py-5">
+                        <div class="col-sm-5 col-md-6">
+                            <h3>Phone</h3>
+                            <p>261455555</p>  
+                        </div>
+                        <div class="col-sm-5 col-md-6">
+                            <h3>Email</h3>
+                            <p>mateware@gmail.com</p>
+                        </div>
                     </div>
-                    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
+                    <div class="row align-items-end py-5">
+                        <div class="col-sm-5 col-md-6">
+                            <p>icon</p>
+                            <p>icon</p>
+                            <p>icon</p>
+                        </div>
+                    </div>
+ 
+                <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
                         <p class="d-none"> hola</p>
                     </div>
     
