--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon-mw.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/255a050b09.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Home</title>
 </head>
@@ -154,34 +155,32 @@
             </div>
         </div>
 
-        <div class="mateWare-container mateWare-contact container-fluid text-center d-flex flex-column flex-wrap justify-content-center" id="mw-contactus">
-            <div class="row">
-                <div class="col-sm-4 col-md-6 text-start d-flex flex-column flex-wrap justify-content-between px-5 py-5">
-                    <div class="pb-5">
-                        <h2 class="fw-bold display-4">Talk to Us.</h2>
-                        <p class="fw-light h3">Reach out for an exploratory conversation.</p>
-                    </div>
-                    <div class="d-flex flex-row justify-content-between flex-wrap gap-5 text-start">
-                        <div class="">
-                            <h3 class="fw-bolder">PHONE</h3>
-                            <p class="h5 fw-light">2614555551</p> 
-                        </div>
-                        <div class="">
-                            <h3 class="fw-bolder">EMAIL</h3>
-                            <p class="h5 fw-light">mateware@gmail.com</p>
-                        </div>
-                    </div>
-
+        <div class="mateWare-container mateWare-contact container-fluid text-center d-flex flex-column flex-wrap justify-content-around bg-dark text-light id="mw-contactus">
+         
+                <div class="">
+                    <h2 class="fw-bold display-4">Talk to Us.</h2>
+                    <p class="fw-light fs-4">Reach out for an exploratory conversation.</p>
+                </div>
+                <div class="d-flex flex-row justify-content-around flex-wrap gap-5">
                     <div class="">
-                       <img class="rounded-5" src="./images/email-icon-black.png" alt="" width="30px">
-                       <img class="rounded-5" src="./images/insta-icon-black.png" alt="" width="30px">
-                       <img class="rounded-5" src="./images/what-icon-black.png" alt="" width="30px">
+                        <h3 class="fw-bolder">PHONE</h3>
+                        <p class="h5 fw-light">2614555551</p> 
                     </div>
-                </div>        
-            </div>    
+                    <div class="">
+                        <h3 class="fw-bolder">EMAIL</h3>
+                        <p class="h5 fw-light">mateware@gmail.com</p>
+                    </div>
+                </div>
+
+                <div class="d-flex flex-row justify-content-center gap-3">
+                    <i class="fa-regular fa-envelope"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                </div>
+
         </div>
 
-        <footer class="mateWare-footer d-flex flex-column text-center container pb-5 gap-4">
+        <footer class="mateWare-footer d-flex flex-column text-center container-fluid pb-5 gap-4 pt-5">
 
                 <div>
                     <img src="./images/logomate70pxverde.png" alt="" width="50px">
