media queries deleted

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div class="mateWare-container mateWare-contact container-fluid text-center d-flex flex-column flex-wrap justify-content-around bg-dark text-light id="mw-contactus">
          
-                <div class="col-sm-4">
+                <div class="">
                     <h2 class="fw-bold display-4">Talk to Us.</h2>
                     <p class="fw-light fs-4">Reach out for an exploratory conversation.</p>
                 </div>
