--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
         </div>
 
-        <div class="mateWare-container mateWare-contact container-fluid text-center d-flex flex-column flex-wrap justify-content-around bg-dark text-light id="mw-contactus">
+        <div class="mateWare-container mateWare-contact container-fluid text-center d-flex flex-column flex-wrap justify-content-around" id="mw-contactus">
          
                 <div class="">
                     <h2 class="fw-bold display-4">Talk to Us.</h2>
