New services section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
         </div>
     </section>
-    
+    <section>
         <div class="mateWare-container mateWare-service text-center container-fluid text-light" id="mw-service">
             <div class="p-5"> 
                 <h1 class="display-3"><strong>Services</strong></h1>
