Service section modified for data bs theme dark

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                         <div class="text-end">
                             <h2 class="display-6">Technological Solutions</h2>
                             <p class="h5 fw-light pb-4">In tune with your needs, we merge our knowledge with cutting-edge technology to provide you with simple and highly effective solutions. We want you to be involved in the ideation and planning of your project. From the beginning, we aim for your vision to guide our work.</p>
-                            <div class="mateWare-accordion text-end pb-5">
+                            <div class="mateWare-accordion text-end pb-5" data-bs-theme="dark">
                                 <div class="accordion accordion-flush bg-transparent text-light" id="accordionFlushExample">
                                     <div class="accordion-item bg-transparent text-light ">
                                     <h2 class="accordion-header bg-transparent text-light">
-                                        <button class="accordion-button collapsed bg-light bg-opacity-75 border border-secondary rounded-4 text-center" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        <button class="accordion-button collapsed bg-transparent border-bottom border-primary text-center" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                             Capabilities
                                         </button>
                                     </h2>
@@ -91,18 +91,18 @@
                     </div>
 
 
-                    <div class="col pb-5">
+                    <div class="col pb-5 pt-5">
                         <img width="600px" src="./images/software.png" alt="">
                     </div>
-                    <div class="col pb-5">                        
+                    <div class="col pb-5 pt-5">                        
                         <div class="text-start">
                             <h2 class="display-6">Embedded Systems</h2>
                             <p class="h5 fw-light pb-4">We breathe life into your electronic equipment, ensuring it not only functions according to your needs but surpasses your expectations through advanced embedded software solutions. Whether starting from scratch or integrating with existing developments, we also invite you to be part of the software design process if you wish.</p>
-                            <div class="mateWare-accordion text-start pb-5">
+                            <div class="mateWare-accordion text-start pb-5" data-bs-theme="dark">
                                 <div class="accordion accordion-flush bg-transparent text-light" id="accordionFlushExample">
                                     <div class="accordion-item bg-transparent text-light">
                                         <h2 class="accordion-header bg-transparent text-light">
-                                            <button class="accordion-button collapsed bg-light bg-opacity-75 border border-secondary rounded-4 text-center" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                            <button class="accordion-button collapsed bg-transparent border-bottom border-primary text-center" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                                                 Capabilities
                                             </button>
                                         </h2>
@@ -128,15 +128,15 @@
                         </div>
                     </div>
 
-                    <div class="col pb-5">
+                    <div class="col pb-5 pt-5">
                         <div class="text-end">
                             <h2 class="display-6">PCB Design</h2>
                             <p class="h5 fw-light pb-4">From concept to production, we create printed circuit boards tailored to the specific needs of your electronic equipment.</p>
-                            <div class="mateWare-accordion text-end pb-5">
+                            <div class="mateWare-accordion text-end pb-5" data-bs-theme="dark">
                                 <div class="accordion accordion-flush bg-transparent text-light" id="accordionFlushExample">
                                     <div class="accordion-item bg-transparent text-light ">
                                         <h2 class="accordion-header bg-transparent text-light">
-                                            <button class="accordion-button collapsed bg-light bg-opacity-75 border border-secondary rounded-4 text-center" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                            <button class="accordion-button collapsed bg-transparent border-bottom border-primary text-center" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                                                 Capabilities
                                             </button>
                                         </h2>
@@ -204,7 +204,7 @@
             </div>
         </div>
 
-        <div class="mateWare-container mateWare-contact container-fluid text-center d-flex flex-column flex-wrap justify-content-around" id="mw-contactus">
+        <div class="mateWare-container mateWare-contact container-fluid text-center d-flex flex-column flex-wrap justify-content-around text-light" id="mw-contactus">
          
                 <div class="">
                     <h1 class="display-3"><strong>Talk to Us.</strong></h1>
@@ -221,15 +221,15 @@
                     </div>
                 </div>
 
-                <div class="d-flex flex-row justify-content-center gap-3">
-                    <i class="fa-regular fa-envelope"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
+                <div class="d-flex flex-row justify-content-center gap-3 fw-bold fs-5">
+                    <strong><i class="fa-regular fa-envelope"></i></strong>
+                    <strong><i class="fa-brands fa-instagram"></i></strong>
+                    <strong><i class="fa-brands fa-whatsapp"></i></strong>
                 </div>
 
         </div>
 
-        <footer class="mateWare-footer d-flex flex-column text-center container-fluid pb-5 gap-4 pt-5">
+        <footer class="mateWare-footer d-flex flex-column text-center container-fluid pb-5 gap-4 pt-5 bg-light">
 
                 <div>
                     <img src="./images/logomate70pxverde.png" alt="" width="50px">
@@ -244,7 +244,7 @@
                     <a href=""><img src="./images/email-icon.png" alt="email icon"></a>                   
                 </div>
                 <div>
-                    <p class="text-body-secondary"> ® 2024 mateWare. All Rights Reserved. </p>
+                    <p class="text-body-secondary fw-medium"> ® 2024 mateWare. All Rights Reserved. </p>
                 </div>
         
             <div class="d-none">
