error correction -service card

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav>
         </div>
 
-        <div class="mateWare-container mateWare-home row gy-5" id="mw-home">
+        <div class="mateWare-container mateWare-home row" id="mw-home">
             <div class="text-center">
                 <img src="./images/logomate70pxazul.png" alt="">
             </div>
@@ -54,7 +54,7 @@
                 <h1 class="display-3"><strong>Services</strong></h1>
             </div>
 
-            <div class="container text-center overflow-hidden p-5 d-flex flex-wrap">
+            <div class="container-fluid text-center overflow-hidden p-5 d-flex flex-wrap">
                 <div class="row row-cols-2 gy-5">
                     <div class="col pb-5">
                         <div class="text-end">
@@ -86,16 +86,16 @@
                            
                         </div>
                     </div>
-                    <div class="col pb-5">
-                        <img width="600px" src="./images/solutions.png" alt="">
+                    <div class="col pb-5 container text-start">
+                        <img style="width: 37rem;" src="./images/solutions.png" alt="">
                     </div>
 
 
-                    <div class="col pb-5 pt-5">
-                        <img width="600px" src="./images/software.png" alt="">
+                    <div class="col pb-5 pt-5 container text-end">
+                        <img style="width: 37rem;" src="./images/system.png" alt="">
                     </div>
                     <div class="col pb-5 pt-5">                        
-                        <div class="text-start">
+                        <div class="text-start px-4">
                             <h2 class="display-6">Embedded Systems</h2>
                             <p class="h5 fw-light pb-4">We breathe life into your electronic equipment, ensuring it not only functions according to your needs but surpasses your expectations through advanced embedded software solutions. Whether starting from scratch or integrating with existing developments, we also invite you to be part of the software design process if you wish.</p>
                             <div class="mateWare-accordion text-start pb-5" data-bs-theme="dark">
@@ -155,8 +155,8 @@
                             </div> 
                         </div>
                     </div>
-                    <div class="col pb-5">
-                        <img width="600px" src="./images/pbc.png" alt="">
+                    <div class="col pb-5 container text-start">
+                        <img style="width: 37rem;" src="./images/pbc.png" alt="">
                     </div>
 
                 </div>               
