--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="mateWare-navbar pb-5">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
-                <a class="navbar-brand fw-light" href="./index.html"><img src="./images/logo100px.png" alt=""></a>
+                <a class="navbar-brand fw-light" href="./index.html"><img src="./images/logo.png" alt="" style="height: 2rem; width: 6rem;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,7 +36,7 @@
 
         <div class="mateWare-container mateWare-home row" id="mw-home">
             <div class="text-center">
-                <img src="./images/logomate70pxazul.png" alt="">
+                <img src="./images/logo-mate-verdeazulado.png" alt="" style="height: 5rem; width: 5rem;">
             </div>
             <div>
                 <h1 class="display-1 text-center text-dark pb-2"><b><strong>INNOVATIVE ELECTRONIC STUDIO</strong></b></h1>
@@ -229,27 +229,18 @@
 
         </div>
 
-        <footer class="mateWare-footer d-flex flex-column text-center container-fluid pb-5 gap-4 pt-5 bg-light">
+        <footer class="mateWare-footer d-flex flex-column justify-items-center align-items-center container-fluid pt-3 pb-5">
 
-                <div>
-                    <img src="./images/logomate70pxverde.png" alt="" width="50px">
-                </div>
-                <div>
-                    <img src="./images/logo100px.png" alt="" width="100px">
-                </div>
-
-                <div class="d-flex flex-row justify-content-center gap-5">
-                    <a href=""><img src="./images/what-icon.png" alt="whatsapp icon"></a>
-                    <a href=""><img src="./images/insta-icon.png" alt="instagram icon"></a>
-                    <a href=""><img src="./images/email-icon.png" alt="email icon"></a>                   
-                </div>
-                <div>
-                    <p class="text-body-secondary fw-medium"> ® 2024 mateWare. All Rights Reserved. </p>
-                </div>
-        
-            <div class="d-none">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6696.775258250388!2d-68.8418144!3d-32.9407739!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0bc6a799e271%3A0x69d03bc4cff39acc!2sCega%20Electronica!5e0!3m2!1ses-419!2sar!4v1704482481732!5m2!1ses-419!2sar" width="250" height="200" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="rounded-5"></iframe>
+            <img src="./images/mateWare-logo.png" alt="" style="height: 5rem; width: 15rem;">
+            <p class="text-light text-opacity-50 fw-normal"> ® 2024 mateWare. All Rights Reserved. </p>
+            <div class="d-flex flex-row gap-3">
+                <a class="fw-medium text-body-secondary text-decoration-none" aria-current="page" href="#mw-home">Home</a>
+                <p class="fw-medium text-body-secondary ">|</p>
+                <a class="fw-medium text-body-secondary text-decoration-none" href="#mw-service">Services</a>
+                <p class="fw-medium text-body-secondary ">|</p>
+                <a class="fw-medium text-body-secondary text-decoration-none" href="#mw-ourteam">Our Team</a>
             </div>
+
         </footer>
 
   </section>
